--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+      <base href="/shop-show/">
+    
+    
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-commerce</title>
   </head>
